		* Ship skins with tarball
		* Display file size in human readable format in FileDetailDialog
		* Added upload feedback
		* Added option to enable EC and set pass in A[amuled]
		* Removed GetLocaleDir()
		* Zipped skin format
		* Fix utf8 problem with file names
		* Fixed toolbar display with skins when blinking on incoming message
		* Fix #1114, missing break statement, thanks to mr_hyde

	Xaignar:
		* Renaming the SearchList typedef to CSearchResultList
		* Splitting CSearchFile out from SearchList.* to SearchFile.*. 
		* fix initialization of member variables in CSearchFile when
		  creating on remote gui.
		* Call GetLength safely when sharing files
		* Added support for child results to CSearchListCtrl
		* Major cleanup of CSearchList
		* Add logger target for the thread-scheduler
		* Add smart pointers CScopedPtr and CScopedArray
		* Fix possible crash due to pending events
		* Fix accessing empty list in CMuleListCtrl
		* Add support for displaying large files with CBarShader
		* Improved sanity checking and simplified exception-handling
		  via CScopedPtr and CScopedArray.
		* Major reworking of threads, add a thread scheduler for
		  IO intensive tasks, improve thread-safety for AICH-sync thread
		* Fix FileIO unittests and add test of const CMemFile objects
		* Update AICH from eMule-0.47a Beta1
		* fix positioning of individual frames
		* Improved exception handling
		* Updating the FindMatchingClient function
		* Avoid dangling pointers in case of asserts failing
		* Updating CFormat to properly handle 64b ints on all platforms
		* Fixing CFile::GetAvailable if position is past EOF
		* Fixed possible use of uninitialized variables
		* Adding template function for freeing the contents of a list/map
		* Remove CList
		* Fixing a couple of infinite loops
		* Fixes file completion under amuled
		* Add locking to the ED2KLinks file
		* Removed multiple macros for array size
		* Removed the CMD4Hash from wxString constructor